--- a/wp-content/themes/balagur-2016/css/site/_main.page.scss
+++ b/wp-content/themes/balagur-2016/css/site/_main.page.scss
@@ -255,7 +255,7 @@
 //Reviews section
 .vb-reviews-bg {
   position: relative;
-  background-image: url(/wp-content/uploads/2017/02/reviewsBgLoveImg.jpg);
+  //background-image: url(/wp-content/uploads/2017/02/reviewsBgLoveImg.jpg);
   background-position: center center;
   background-size: cover;
   z-index: 0;
@@ -542,7 +542,7 @@
 // Contacts section
 .vb-contacts-bg {
   position: relative;
-  background-image: url(/wp-content/uploads/2016/12/kiev-map.jpg);
+  //background-image: url(/wp-content/uploads/2016/12/kiev-map.jpg);
   background-size: cover;
   z-index: 0;
 
