images, css file optimazation; javascript code opt

--- a/wp-content/themes/balagur-2016/css/site/_buttons.scss
+++ b/wp-content/themes/balagur-2016/css/site/_buttons.scss
@@ -11,10 +11,12 @@
 .vb-button-big {
   font-size: 16px;
   line-height: 25px;
-  padding: 13px 5%;
+  padding: 13px 0;
   text-transform: uppercase;
   position: relative;
   z-index: 3;
+  max-width: 70%;
+  width: 250px;
 
   &:before,
   &:after {
@@ -39,9 +41,10 @@
   display: inline-block;
   padding: 0;
   input {
-    display: inline-block;
-    padding: 13px 20px;
-    min-width: 150px;
+    display: block;
+    padding: 13px 0;
+    width: 100%;
+    text-transform: uppercase;
   }
 }
 .vb-button-primary {
