--- a/wp-content/themes/balagur-2016/css/site/_forms.scss
+++ b/wp-content/themes/balagur-2016/css/site/_forms.scss
@@ -29,16 +29,41 @@
   }
   .vb-submit .ajax-loader {
     position: absolute;
-    background-image: url(/wp-content/uploads/2016/12/ripple.gif);
-    z-index: 2;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-color: rgba(0,0,0,0.3);
+    top: 10%;
+    background: #7b1fa2;
     width: 100%;
-    height: 100%;
+    height: 80%;
     left: 0;
     margin: 0;
+    text-align: center;
+    > span {
+      height: 100%;
+      width: 8px;
+      margin-left: 1px;
+      margin-right: 1px;
+      display: inline-block;
+      -webkit-animation: anim-ajax 0.6s infinite cubic-bezier(0.39, 0.58, 0.57, 1);
+      animation: anim-ajax 0.6s infinite cubic-bezier(0.39, 0.58, 0.57, 1);
+    }
+
+    .bar1 {
+      background-color: $red-500;
+    }
+    .bar2 {
+      background-color: $amber-500;
+      -webkit-animation-delay: .15s;
+      animation-delay: .15s;
+    }
+    .bar3 {
+      background-color: $light-green-500;
+      -webkit-animation-delay: .3s;
+      animation-delay: .3s;
+    }
+    .bar4 {
+      background-color: $blue-500;
+      -webkit-animation-delay: .45s;
+      animation-delay: .45s;
+    }
   }
 }
 .vb-form-common-group {
@@ -103,5 +128,27 @@
   select:-webkit-autofill {
     box-shadow: inset 0 1000px 0 $scheme-medium;
     -webkit-text-fill-color: $scheme-thin;
+  }
+}
+
+
+@-webkit-keyframes anim-ajax {
+  0%, 100% {
+    -webkit-transform: scaleY(0.05);
+    transform: scaleY(0.05);
+  }
+  20% {
+    -webkit-transform: scaleY(1.0);
+    transform: scaleY(1.0);
+  }
+}
+@keyframes anim-ajax {
+  0%, 100% {
+    -webkit-transform: scaleY(0.05);
+    transform: scaleY(0.05);
+  }
+  20% {
+    -webkit-transform: scaleY(1.0);
+    transform: scaleY(1.0);
   }
 }
