--- a/wp-content/themes/balagur-2016/css/site/_variables.scss
+++ b/wp-content/themes/balagur-2016/css/site/_variables.scss
@@ -1,19 +1,30 @@
 $font-base: 'Rubik', Helvetica, Arial, sans-serif;
 
-// COLORS
-$primary-color: #9c27b0;
-$primary-color-dark: #7b1fa2;
-$primary-color-light: #ba68c8;
+// Material palette
+$red-500: #f44336;
+$purple-300: #ba68c8;
+$purple-500: #9c27b0;
+$purple-700: #7b1fa2;
+$blue-500: #2196f3;
+$light-green-500: #8bc34a;
+$yellow-300: #fff176;
+$yellow-600: #fdd835;
+$amber-500: #ffc107;
 
-$accented-color: #fdd835;
-$accented-color-light: #fff176;
+// COLORS
+$primary-color: $purple-500;
+$primary-color-dark: $purple-700;
+$primary-color-light: $purple-300;
+
+$accented-color: $yellow-600;
+$accented-color-light: $yellow-300;
 
 $light-color: #fff;
 $dark-color: #000;
 
-$error-color: #f44336;
-$danger-color: #ffc107;
-$success-color: #8bc34a;
+$error-color: $red-500;
+$danger-color: $amber-500;
+$success-color: $light-green-500;
 
 // Grey scheme:
 $scheme-dark: #37474f;
