--- a/wp-content/themes/balagur-2016/style.css
+++ b/wp-content/themes/balagur-2016/style.css
@@ -243,6 +243,9 @@ hr {
   border: none;
   margin: 0; }
 
+address {
+  font-style: normal; }
+
 :focus {
   outline: 0; }
 
@@ -1360,10 +1363,12 @@ blockquote {
 .vb-button-big {
   font-size: 16px;
   line-height: 25px;
-  padding: 13px 5%;
+  padding: 13px 0;
   text-transform: uppercase;
   position: relative;
-  z-index: 3; }
+  z-index: 3;
+  max-width: 70%;
+  width: 250px; }
   .vb-button-big:before, .vb-button-big:after {
     content: "";
     display: block;
@@ -1386,9 +1391,10 @@ blockquote {
   display: inline-block;
   padding: 0; }
   .vb-submit input {
-    display: inline-block;
-    padding: 13px 20px;
-    min-width: 150px; }
+    display: block;
+    padding: 13px 0;
+    width: 100%;
+    text-transform: uppercase; }
 
 .vb-button-primary {
   background-color: #9c27b0;
@@ -1477,16 +1483,35 @@ blockquote {
   left: 0; }
 .vb-form-wrapper .vb-submit .ajax-loader {
   position: absolute;
-  background-image: url(/wp-content/uploads/2016/12/ripple.gif);
-  z-index: 2;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: rgba(0, 0, 0, 0.3);
+  top: 10%;
+  background: #7b1fa2;
   width: 100%;
-  height: 100%;
+  height: 80%;
   left: 0;
-  margin: 0; }
+  margin: 0;
+  text-align: center; }
+  .vb-form-wrapper .vb-submit .ajax-loader > span {
+    height: 100%;
+    width: 8px;
+    margin-left: 1px;
+    margin-right: 1px;
+    display: inline-block;
+    -webkit-animation: anim-ajax 0.6s infinite cubic-bezier(0.39, 0.58, 0.57, 1);
+    animation: anim-ajax 0.6s infinite cubic-bezier(0.39, 0.58, 0.57, 1); }
+  .vb-form-wrapper .vb-submit .ajax-loader .bar1 {
+    background-color: #f44336; }
+  .vb-form-wrapper .vb-submit .ajax-loader .bar2 {
+    background-color: #ffc107;
+    -webkit-animation-delay: .15s;
+    animation-delay: .15s; }
+  .vb-form-wrapper .vb-submit .ajax-loader .bar3 {
+    background-color: #8bc34a;
+    -webkit-animation-delay: .3s;
+    animation-delay: .3s; }
+  .vb-form-wrapper .vb-submit .ajax-loader .bar4 {
+    background-color: #2196f3;
+    -webkit-animation-delay: .45s;
+    animation-delay: .45s; }
 
 .vb-form-common-group {
   position: relative;
@@ -1542,6 +1567,20 @@ blockquote {
     box-shadow: inset 0 1000px 0 #546e7a;
     -webkit-text-fill-color: #eceff1; }
 
+@-webkit-keyframes anim-ajax {
+  0%, 100% {
+    -webkit-transform: scaleY(0.05);
+    transform: scaleY(0.05); }
+  20% {
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1); } }
+@keyframes anim-ajax {
+  0%, 100% {
+    -webkit-transform: scaleY(0.05);
+    transform: scaleY(0.05); }
+  20% {
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1); } }
 .vb-header {
   padding-top: 1rem; }
 
@@ -1831,6 +1870,8 @@ blockquote {
   background-color: #B0FECC; }
 .vb-banners-slider .vb-header-140 {
   background-color: #AEFEFF; }
+.vb-banners-slider .vb-header-image {
+  background-color: #282222; }
 .vb-banners-slider img {
   margin: auto; }
 
